<?xml version="1.0"?>
<package format="2">
  <name>rmp220_middleware</name>
  <version>0.0.0</version>
  <description>Middleware package for controlling the RMP220 chassis in ROS 1.</description>

  <maintainer email="bjoern.ellensohn@gmail.com">Bjorn Ellensohn</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <build_depend>catkin</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>segway_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>segway_msgs</exec_depend>

  <!-- Export build type -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
